# wmfapp

./: .gitignore  .sqlfluff  .sqlfluffignore  .sqllsrc.json  Cargo.toml  README.md  query_new_follows.sql  query_unfollows.sql  tw_id_url.txt
migrations/: 0001_follow_table.sql  0001_followers_table.sql  0002_meta_table.sql  0003_follow_table.sql
scripts/: generate_user_access_tokens.py  gentokens_oob.py
src/: main.rs
