[package]
name = "ferris_follies"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.162"
serde_json = "1.0.96"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time"] }
twitter-v2 = { version = "0.1.8", features = ["arbitrary_precision", "rustls-tls"] }
